@@ -103,11 +103,25 @@ ecore_con_socks_read(Ecore_Con_Server *svr, unsigned char *buf, int num)
         DBG("SOCKS: %d bytes", num);
         if (num < 8)
           {
+#ifdef FIONREAD
+             if (!svr->ecs_recvbuf)
+               svr->ecs_recvbuf = eina_binbuf_manage_new_length(buf, num);
+             else
+               eina_binbuf_append_length(svr->ecs_recvbuf, buf, num);
+             if (!svr->ecs_recvbuf) goto error;
+#else
              if (!svr->ecs_recvbuf) svr->ecs_recvbuf = eina_binbuf_new();
              if (!svr->ecs_recvbuf) goto error;
              eina_binbuf_append_length(svr->ecs_recvbuf, buf, num);
+#endif
              /* the slowest connection on earth */
-             if (eina_binbuf_length_get(svr->ecs_recvbuf) != 8) return;
+             if (eina_binbuf_length_get(svr->ecs_recvbuf) != 8)
+               {
+#ifdef FIONREAD
+                  free(buf);
+#endif
+                  return;
+               }
              data = eina_binbuf_string_get(svr->ecs_recvbuf);
           }
         else if (num > 8) goto error;
@@ -149,6 +163,9 @@ ecore_con_socks_read(Ecore_Con_Server *svr, unsigned char *buf, int num)
         svr->ecs_state = ECORE_CON_SOCKS_STATE_DONE;
         INF("PROXY CONNECTED");
         if (svr->ecs_recvbuf) eina_binbuf_free(svr->ecs_recvbuf);
+#ifdef FIONREAD
+        else free(buf);
+#endif
         svr->ecs_recvbuf = NULL;
         svr->ecs_buf_offset = svr->ecs_addrlen = 0;
         memset(svr->ecs_addr, 0, sizeof(svr->ecs_addr));
@@ -159,6 +176,9 @@ ecore_con_socks_read(Ecore_Con_Server *svr, unsigned char *buf, int num)
      }
    return;
 error:
+#ifdef FIONREAD
+   free(buf);
+#endif
    _ecore_con_server_kill(svr);
 }
 
